--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="#">
+             href="/michaelbianchiresumecloud.pdf">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
