--- a/babel.html
+++ b/babel.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Babel demo</title>
+        <style>
+        </style>
     </head>
     <body>
         <main>
